welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:19: error: type mismatch;
 found   : Unit
 required: Int
 	nb=nb+1
          ^countTeen:21: error: type mismatch;
 found   : Unit
 required: Int
 	nb=nb
          ^